# NanoMind

./: README.md  metadata.json  package-lock.json  package.json
ai-assistant/.github/workflows/: ci.yml
ai-assistant/docs/: architecture.md  firmware_build.md  implementation_guide.md  os_implementation_guide.md  protocol.md  server_setup.md
ai-assistant/edge_server/: Cargo.toml
ai-assistant/edge_server/src/: cloud_fallback.rs  config.rs  llm_router.rs  main.rs  server.rs  session_manager.rs  websocket.rs
ai-assistant/edge_server/src/integrations/: google.rs  meta.rs  mod.rs
ai-assistant/firmware/: CMakeLists.txt
ai-assistant/firmware/main/: CMakeLists.txt  ai_client.cpp  (+5 more)
ai-assistant/tools/: device_setup.py
api/: httpClient.ts  wsClient.ts
app/: globals.css  layout.tsx  page.tsx
components/: AutomationWorkspace.tsx  ChatWindow.tsx  ControlConsole.tsx  DeviceList.tsx  MessageBubble.tsx  PWARegister.tsx  SettingsPanel.tsx
docs/: README.md
docs/agents/: digital-worker.md  overview.md  workflows.md
docs/channels/: google-workspace.md  meta-apps.md  overview.md
docs/gateway-ops/: protocol.md  runbook.md  security.md
docs/get-started/: overview.md  quick-start.md
docs/help/: faq.md  troubleshooting.md
docs/install/: edge-server.md  firmware.md  frontend.md  overview.md
docs/models/: overview.md
docs/reference/: api-reference.md  edge-server-files.md  environment-variables.md  firmware-files.md  frontend-files.md  repository-map.md
docs/tools/: overview.md
hooks/: useNanoMind.ts
lib/: runtimeConfig.ts
public/: manifest.json  sw.js
